--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,55 @@
+$background : #1B242B;
+$darkgreen : #009085;
+$lightgreen : #4EBE9F;
+$yellow: #EAFF99;
+$brown: #8D8F6F;
+
+
+
 body {
-  background: #ece7e7;
+  background: $background;
+  color: $yellow;
+}
+
+.title {
+  background-color: $lightgreen;
+  width: 100%;
+  height: 5%;
+  position: absolute;
+  left: 0; right: 0; top: 0;
+  margin: 0;
+  margin-bottom: 20px;
+  margin-left: 0px;
+}
+
+.title {
+
+  span {
+    margin-left: 25%;
+    font-size: 32px;
+    color: $yellow;
+  }
+
+  a {
+    padding-left: 50px;
+    color: $brown;
+  }
+}
+
+.sidebar {
+  background-color: $darkgreen;
+  width: 150px;
+  height: 95%;
+  position: absolute;
+  left: 0; top: 5%;
+  float: left;
+  font-size: 40px;
+}
+
+.content {
+  color: $lightgreen;
+  //clear: left;
+  margin-top: 10%;
+  margin-left: 150px;
+  font-size: 30px;
 }
