--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,12 +14,13 @@ body {
 .title {
   background-color: $lightgreen;
   width: 100%;
-  height: 5%;
+  height: 8%;
   position: absolute;
   left: 0; right: 0; top: 0;
   margin: 0;
   margin-bottom: 20px;
   margin-left: 0px;
+  float: left;
 }
 
 .title {
@@ -39,17 +40,17 @@ body {
 .sidebar {
   background-color: $darkgreen;
   width: 150px;
-  height: 95%;
+  height: 92%;
   position: absolute;
-  left: 0; top: 5%;
+  left: 0; top: 8%;
   float: left;
   font-size: 40px;
 }
 
 .content {
   color: $lightgreen;
-  //clear: left;
-  margin-top: 10%;
+  clear: left;
+  margin-top: 7%;
   margin-left: 150px;
   font-size: 30px;
 }
